# le_lapin

./: .env  .gitignore  README.md  bot.py  main.py  pyproject.toml  requirements.txt  settings.py
cogs/: lapin_ai.py
core/: bot.py
core/cogs/: lapin_ai.py
demo/: demo_on_message.py  demo_prefix_command.py
handlers/: chat.py
src/: bot.py  server.py
src/cogs/: demo.py  lapin_ai.py
