[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["wosamar <woodnnng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.3.2"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
