[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["wosamar <woodnnng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.23"
requests = "^2.32.3"
huggingface-hub = "^0.23.4"
google-generativeai = "^0.7.1"
flask = "^3.0.3"
py-cord = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
